// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`MapValidatorAdvanced combination of input, result & error Retrieve Message Status usecase then validation will fail 1`] = `
Object {
  "profile-provider": Object {
    "errors": "8:33 JessieExpression - Wrong Input Structure: expected messageId, but got input.wrong.key.in.input
8:33 PropertyAccessExpression - Wrong Input Structure: expected messageId, but got input.wrong.key.in.input
10:26 JessieExpression - Wrong Input Structure: expected messageId, but got input.to
10:26 PropertyAccessExpression - Wrong Input Structure: expected messageId, but got input.to",
    "warnings": "15:15 OutcomeStatement - Error Not Found: returning \\"ObjectLiteral\\", but there is no error defined in usecase
19:26 ObjectLiteral - Wrong Object Structure: expected deliveryStatus, but got status, some.key
26:26 ObjectLiteral - Wrong Object Structure: expected deliveryStatus, but got status",
  },
}
`;

exports[`MapValidatorAdvanced combination of input, result & error Retrieve Message Status usecase then validation will pass 1`] = `
Object {
  "profile-provider": Object {},
}
`;

exports[`MapValidatorAdvanced combination of input, result & error Send Message usecase then validation will fail 1`] = `
Object {
  "profile-provider": Object {
    "errors": "5:11 HttpCallStatement - Wrong Input Structure: expected to, from, text, but got input.channel
8:26 JessieExpression - Wrong Input Structure: expected to, from, text, but got input.is.wrong
8:26 PropertyAccessExpression - Wrong Input Structure: expected to, from, text, but got input.is.wrong
9:28 JessieExpression - Wrong Input Structure: expected to, from, text, but got input.very.very.wrong
9:28 PropertyAccessExpression - Wrong Input Structure: expected to, from, text, but got input.very.very.wrong",
    "warnings": "14:25 ObjectLiteral - Wrong Object Structure: expected problem, detail, instance, but got some.key
18:50 ObjectLiteral - Wrong Object Structure: expected messageId, but got deliveryStatus, messageID
26:25 ObjectLiteral - Wrong Object Structure: expected problem, detail, instance, but got status, statusID
31:26 ObjectLiteral - Wrong Object Structure: expected messageId, but got status, messageID",
  },
}
`;

exports[`MapValidatorAdvanced combination of input, result & error Send Message usecase then validation will pass 1`] = `
Object {
  "profile-provider": Object {
    "warnings": "19:26 ObjectLiteral - Wrong Object Structure: expected messageId, but got deliveryStatus, messageID
30:42 ObjectLiteral - Wrong Object Structure: expected messageId, but got deliveryStatus, messageID",
  },
}
`;

exports[`MapValidatorAdvanced combination of input, result & error Send Message usecase with any structures then validation will fail 1`] = `
Object {
  "profile-provider": Object {
    "errors": "8:26 JessieExpression - Wrong Input Structure: expected to, from, text, but got input.is.wrong
8:26 PropertyAccessExpression - Wrong Input Structure: expected to, from, text, but got input.is.wrong
9:28 JessieExpression - Wrong Input Structure: expected to, from, text, but got input.very.very.wrong
9:28 PropertyAccessExpression - Wrong Input Structure: expected to, from, text, but got input.very.very.wrong",
    "warnings": "14:25 ObjectLiteral - Wrong Object Structure: expected problem, detail, instance, but got some.key
18:50 ObjectLiteral - Wrong Object Structure: expected messageId, but got messageID
24:25 ObjectLiteral - Wrong Object Structure: expected problem, detail, instance, but got status, statusID
29:26 ObjectLiteral - Wrong Object Structure: expected messageId, but got status, messageID
34:25 ObjectLiteral - Wrong Object Structure: expected problem, detail, instance, but got status, statusID
39:26 ObjectLiteral - Wrong Object Structure: expected messageId, but got status, messageID",
  },
}
`;

exports[`MapValidatorAdvanced combination of input, result & error Send Message usecase with any structures then validation will pass 1`] = `
Object {
  "profile-provider": Object {
    "warnings": "27:42 ObjectLiteral - Wrong Object Structure: expected messageId, but got deliveryStatus, messageID",
  },
}
`;

exports[`MapValidatorAdvanced combination of input, result & error nested then validation will fail 1`] = `
Object {
  "profile-provider": Object {
    "errors": "22:25 PrimitiveLiteral - Wrong Structure: expected INVALID_CHARACTER or INVALID_PERSON, but got \\"NOT_FOUND\\"",
  },
}
`;

exports[`MapValidatorAdvanced combination of input, result & error nested then validation will pass 1`] = `
Object {
  "profile-provider": Object {
    "warnings": "19:49 PrimitiveLiteral - Wrong Structure: expected INVALID_CHARACTER or INVALID_PERSON, but got \\"PERSON_NOT_FOUND\\"",
  },
}
`;

exports[`MapValidatorAdvanced combination of input, result & error swapi get character information then validation will pass 1`] = `
Object {
  "profile-provider": Object {},
}
`;

exports[`MapValidatorAdvanced combination of input, result & error validating binary expression then validation will pass 1`] = `
Object {
  "profile-provider": Object {},
}
`;
